# simpelml

./: .gitignore  Makefile  README.md  Sgrammar.txt  combined.sm  dune-project  grammar.txt  integration.sh  integration_test.sh  run_test.sh
_build/: .db  .digest-db  .to-delete-in-source-tree  log
_build/default/: simpelml.dune-package  simpelml.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: lexer.ml  lexer.mli  lexer.mll  parser.ml  parser.mli  parser.mly  parser__mock.ml.mock  parser__mock.mli.inferred  simpelML.cma  simpelML.cmxa  simpelML.cmxs  simpelML.ml-gen  simpelml.cma  simpelml.cmxa  simpelml.cmxs  simpelml.ml  simpelml.ml-gen
_build/default/lib/.merlin-conf/: exe-simpelml  lib-simpelML  lib-simpelml
exampels/: acceptance_test.sm  astUnitTest.sm  example.simpML  interpUnitTest.sm  stdlib.sm  test.sm  uatParticipant.sm  uatSolutions.sm
exampels/integration_test/: test_decrement.sm  testing_matrixT.sm
examples/: stdlib.sm  test.sm  test2.sm
examples/integration_test/: test_increment.sm  testing_linear_reg.sm  testing_transM_timesM.sm
lib/: Typechecker.ml  ast.ml  dune  interp.ml  lexer.ml  lexer.mll  lexer_test.ml  parser.mly  simpelml.ml  token.ml  type_checker  type_checker.cmi  type_checker.cmo  type_checker.ml
test/: dune  lexer.mll  lexerTests.ml  parser.mly  parserTests.ml  testModule.ml
unit_tests/: ast.ml  ast2.ml  dune  interp.ml  lexer.mll  lexer2.mll  lexerTests.ml  parser.mly  parser2.mly  parserTestInput.sm  parserTestInput.txt  parserTests.ml  simpelml.ml  testModule.ml
(+72 files in other folders)
